<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="login_input_field" type="id"/>
    <item name="password_input_field" type="id"/>
    <item name="login_button" type="id"/>
    <item name="welcome_text" type="id"/>
    <item name="color_button" type="id"/>


</resources>